--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -106,12 +106,19 @@
 
 .contacts__map-container {
   margin-top: 32px;
+  position: relative;
 }
 
 .contacts__map-img {
   @include img-width;
 }
 
+.contacts__map-api {
+  top: 0px;
+  width: 100%;
+  height: 462px;
+  position: absolute;
+}
 
 @media (min-width: $tablet-width) {
   .contacts{
@@ -258,6 +265,7 @@
     padding-top: 70px;
     display: flex;
     flex-direction: column;
+    @include img-width;
   }
 
   .contacts__map-container{
@@ -273,10 +281,6 @@
     padding-top: 10px;
     font-size: 53px;
     line-height: 57px;
-  }
-
-  .contacts__map-api {
-    @include img-width;
   }
 
   .contacts__flag-icon {
