--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -86,6 +86,7 @@
 
 @media(min-width: $desctop-width) {
   .modal-add-item {
-    left: 35%;
+      left: 50%;
+      transform: translateX(-50%);
   }
 }
