--- a/source/sass/font-stack.scss
+++ b/source/sass/font-stack.scss
@@ -7,8 +7,8 @@ $font-normal: 400;
   font-weight: 400;
   font-style: normal;
   src:
-  url("../fonts/opensans/opensans-regular.woff2") format("woff2"),
-  url("../fonts/opensans/opensans-regular.woff") format("woff");
+  url("../fonts/opensans-regular.woff2") format("woff2"),
+  url("../fonts/opensans-regular.woff") format("woff");
 }
 
 @font-face {
@@ -16,7 +16,7 @@ $font-normal: 400;
   font-weight: 700;
   font-style: normal;
   src:
-  url("../fonts/opensans/opensans-bold.woff2") format("woff2"),
-  url("../fonts/opensans/opensans-bold.woff") format("woff");
+  url("../fonts/opensans-bold.woff2") format("woff2"),
+  url("../fonts/opensans-bold.woff") format("woff");
 }
 
